2006-02-11 Borut Razem <borut.razem AT siol.net>

	* src/SDCCmain.c: Added "sdcc: Calling linker..." if --verbose,
	  print "Processor: xxx" message to stdout only if --verbose

2006-02-11 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCglue.c (printIvalStruct): fixed bug 1426356 union initializer
	* support/regression/tests/bug1426356.c: added
	* support/regression/tests/bitfields.c: removed 2 tests

2006-02-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/at89c51snd1c.h: updated comments, see patch 1428901
	* device/include/mcs51/c8051f330.h,
	* device/include/mcs51/c8051f350.h: used () with __at, renamed IDLE,STOP to
	  PCON_IDLE,PCON_STOP and added sfr16 definitions
	* device/lib/_divsint.c,
	* device/lib/_divuint.c,
	* device/lib/_divulong.c,
	* device/lib/_divulong.c: renamed a,b to x,y to avoid confusion, fixed
	  register bank bug for small stackauto

2006-02-09 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/fwk/lib/timeout.c: include <stdlib.h> for exit()

2006-02-08 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/ports/mcs51-xstack-auto/spec.mk: forgot -I(...)/mcs51
	* all.dsp: corrected several bin paths
	* device/include/mcs51/c8051f120.h,
	* device/include/mcs51/c8051f300.h,
	* device/include/mcs51/c8051f310.h: used () with __at and renamed IDLE,STOP
	  to PCON_IDLE,PCON_STOP
	* device/include/mcs51/c8051f320.h: see above, also added sfr16 definitions
	* device/lib/printf_large.c (output_float): fixed bug 1388703
	* support/regression/tests/bug1057979.c: added test for bug 1388703

2006-02-08 Raphael Neider <rneider AT web.de>

	* src/pic/pcode.c (pciTRIS): fixed typo,
	  (BuildFlow,LinkFlow_pCode): added (disabled) debug output,
	  (LinkFlow): fixed handling of flows that end in a call,
	  (ReuseReg): perform safety check earlier
	* src/pic/pcoderegs.c (pCodeRegMapLiveRangesInFlow): fixed
	    to work with flows at the beginning of a pBlock,